@@ -106,6 +106,7 @@ void bind_session_settings()
         .def_readwrite("drop_skipped_requests", &session_settings::drop_skipped_requests)
         .def_readwrite("low_prio_disk", &session_settings::low_prio_disk)
         .def_readwrite("local_service_announce_interval", &session_settings::local_service_announce_interval)
+        .def_readwrite("udp_tracker_token_expiry", &session_settings::udp_tracker_token_expiry)
     ;
 
     enum_<proxy_settings::proxy_type>("proxy_type")
