@@ -181,6 +181,7 @@ namespace libtorrent
 			, drop_skipped_requests(false)
 			, low_prio_disk(true)
 			, local_service_announce_interval(5 * 60)
+			, udp_tracker_token_expiry(60)
 		{}
 
 		// this is the user agent that will be sent to the tracker
@@ -657,6 +658,11 @@ namespace libtorrent
 		// number of seconds between local service announces for
 		// torrents. Defaults to 5 minutes
 		int local_service_announce_interval;
+
+		// the number of seconds a connection ID received
+		// from a UDP tracker is valid for. This is specified
+		// as 60 seconds
+		int udp_tracker_token_expiry;
 	};
 
 #ifndef TORRENT_DISABLE_DHT
